[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/man.png" type="Texture" id=1]
[ext_resource path="res://KinematicPlayer.gd" type="Script" id=2]
[ext_resource path="res://Sound/ohh.wav" type="AudioStream" id=3]
[ext_resource path="res://Font/ComicNeue-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://DeadLabel.gd" type="Script" id=5]
[ext_resource path="res://Sound/jump.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 19.5 )

[sub_resource type="DynamicFont" id=6]
size = 58
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.5, 20 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 2 )
JUMP_POWER = 800
GRAVITY = Vector2( 0, 2000 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 9
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_bottom = 100

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.5, 7.5 )
shape = SubResource( 5 )

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeadLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -428.0
margin_top = -145.0
margin_right = 428.0
margin_bottom = 145.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "PRESS R TO RESTART LOL"
align = 1
autowrap = true
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 10.5 )
shape = SubResource( 7 )

[connection signal="hit" from="." to="CanvasLayer/DeadLabel" method="_on_Player_hit"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
